--- a/Game codes/TicTacToe/help.html
+++ b/Game codes/TicTacToe/help.html
@@ -19,7 +19,7 @@
            <br>
            If both symbols cannot manage to get 3 in a row, the game will end up as a tie
            <br>
-           When the round is over click reset to play again
+           When the round is over, click reset button to play again
         </p>
         <button type id="button"><a href="homepage.html">Back</a></button>
     </div>
